# QuantGPT

./: .env.example  .gitignore  LICENSE  README.md  app.py  chatbot.py  config.example.yaml  protocols.numbers  pyproject.toml  requirements.txt  setup.cfg
crypto_info/: protocols.numbers
crypto_info/csv/: protocols.csv
risk_reports/: risk_report.md
src/databases/: pq_risk.db  pq_risk.py
src/databases/csv_files/: algorithms.csv  certificates.csv  entities.csv  lir.csv  protocols.csv  risk_assessments.csv  vulnerabilities.csv
src/quantgpt/: __main__.py  chunk_consolidation.py  config.py  doc_crawler.py  interface.py  knowledge_graph.py  lir_helper.py  logging.py  main.py  pdf_parser.py  quantgpt_orchestration.py  security_properties.py  unstructured_text_extractor.py
src/quantgpt/llm/: client.py  mapper.py  prompt_eng.py  unstructured_text_parser.py
src/quantgpt/utils/: env.py
